# synapse-lp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: e2e.yml
docs/: DEVELOPMENT_PLAN.md  RULES.md
synapse/: __init__.py  agents.py  config.py  engine.py  image_pipeline.py  lp_engine.py  lp_engine_drafts.py  lp_manual_utils.py  lp_prompts.py  lp_ui.py  lp_ui_manual.py  prompts.py  sandbox.py  ui.py
tests/: conftest.py  e2e_lp.py  test_config.py  test_image_pipeline.py  test_lp_config.py  test_lp_prompts.py  test_prompts.py  test_sandbox.py  test_tools.py  test_ui_manual.py
